# SDHCALAnalysis

./: CMakeLists.txt  INSTALL.txt  README.txt
macros/energyResolution/: DHCAL_Tree_selector.C  DHCAL_Tree_selector.h  minimisation_3seuilsTI3compress_HT.C
macros/minimization/: .gitignore  CommonTools.h  Minimisation.C  Minimisation.h
source/: CMakeLists.txt
source/include/Common/: Linear3DFit.h
source/include/Processors/: CutProcessor.h
source/src/Common/: Linear3DFit.cc  TTreeWrapper.cc
source/src/Processors/: CutProcessor.cc
